--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta http-equiv='X-UA-Compatible' content='IE=edge'>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.6.172/pdf.min.js" integrity="sha512-KEoL9wKXt/fhlAfN+ZNXf3pI48aaQE9Qd5fihHY+5n5XLTSnyGJ0uKgUj//V6KAcjFwzAbCYYPKeGlFES/H5Ng==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		<script src="//mozilla.github.io/pdf.js/build/pdf.js"></script>
 	</head>
 
 	<body style="margin: 0; overflow: hidden;">
-<embed src="https://raw.githubusercontent.com/MissCrispenCakes/On-body-haptics/startup/docs/_excerpttactile.pdf" width="100%" height="850px"/>
+		<h1>excerpt from case study musings</h1>
+		<canvas id="the-canvas"></canvas>
+<!-- 		<embed src="https://raw.githubusercontent.com/MissCrispenCakes/On-body-haptics/startup/docs/_excerpttactile.pdf" width="100%" height="850px"/> -->
 	</body>
 </html>
+
+
+
+
