--- a/index.html
+++ b/index.html
@@ -1,19 +1,78 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset='utf-8'>
-		<meta http-equiv='X-UA-Compatible' content='IE=edge'>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.6.172/pdf.min.js" integrity="sha512-KEoL9wKXt/fhlAfN+ZNXf3pI48aaQE9Qd5fihHY+5n5XLTSnyGJ0uKgUj//V6KAcjFwzAbCYYPKeGlFES/H5Ng==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-		<script src="//mozilla.github.io/pdf.js/build/pdf.js"></script>
-	</head>
+<head>
+  <meta charset="UTF-8">
+  <title>Haptiics context</title>
+</head>
+<body>
 
-	<body style="margin: 0; overflow: hidden;">
-		<h1>excerpt from case study musings</h1>
-		<canvas id="the-canvas"></canvas>
-<!-- 		<embed src="https://raw.githubusercontent.com/MissCrispenCakes/On-body-haptics/startup/docs/_excerpttactile.pdf" width="100%" height="850px"/> -->
-	</body>
+<h1>Excerpt.. initial case study exploration</h1>
+
+<canvas id="the-canvas" style="border: 1px solid black; direction: ltr;"></canvas>
+
+<script src="https://unpkg.com/browse/pdfjs-dist@3.6.172/build/pdf.js"></script>
+
+<script id="script">
+  //
+  // If absolute URL from the remote server is provided, configure the CORS
+  // header on that server.
+  //
+  const url = './_excerpttactile.pdf';
+
+  //
+  // The workerSrc property shall be specified.
+  //
+  pdfjsLib.GlobalWorkerOptions.workerSrc =
+    'https://unpkg.com/browse/pdfjs-dist@3.6.172/build/pdf.worker.js';
+
+  //
+  // Asynchronous download PDF
+  //
+  const loadingTask = pdfjsLib.getDocument(url);
+  (async () => {
+    const pdf = await loadingTask.promise;
+    //
+    // Fetch the first page
+    //
+    const page = await pdf.getPage(1);
+    const scale = 1.5;
+    const viewport = page.getViewport({ scale });
+    // Support HiDPI-screens.
+    const outputScale = window.devicePixelRatio || 1;
+
+    //
+    // Prepare canvas using PDF page dimensions
+    //
+    const canvas = document.getElementById("the-canvas");
+    const context = canvas.getContext("2d");
+
+    canvas.width = Math.floor(viewport.width * outputScale);
+    canvas.height = Math.floor(viewport.height * outputScale);
+    canvas.style.width = Math.floor(viewport.width) + "px";
+    canvas.style.height = Math.floor(viewport.height) + "px";
+
+    const transform = outputScale !== 1 
+      ? [outputScale, 0, 0, outputScale, 0, 0] 
+      : null;
+
+    //
+    // Render PDF page into canvas context
+    //
+    const renderContext = {
+      canvasContext: context,
+      transform,
+      viewport,
+    };
+    page.render(renderContext);
+  })();
+</script>
+
+<hr>
+<h2>JavaScript code:</h2>
+<pre id="code"></pre>
+<script>
+  document.getElementById('code').textContent =
+      document.getElementById('script').text;
+</script>
+</body>
 </html>
-
-
-
-
