Add York University institutional partnership credentials
- KDF Entertainment is official York University procurement vendor
- Adds institutional credibility and academic partnership context
- Links to York U procurement vendor page
- Updates README, research context, and landing page footer

This demonstrates KDF Entertainment is a vetted, legitimate business
entity trusted by major academic institutions.

--- a/index.html
+++ b/index.html
@@ -213,6 +213,10 @@
         <p style="margin-top: 1rem; opacity: 0.7; font-size: 0.9rem;">
             Part of <a href="https://www.kdfentertainment.com" target="_blank">KDF Entertainment</a> open source tools
         </p>
+        <p style="margin-top: 0.5rem; opacity: 0.6; font-size: 0.85rem;">
+            <a href="https://www.yorku.ca/procurement/oba/kdf-entertainment/" target="_blank">York University Procurement Vendor</a> •
+            <a href="https://www.mitacs.ca/our-projects/washable-wearables-for-affordable-and-aesthetic-augmentation-of-visuo-tactile-sensory-perception-enhancement-in-mixed-reality/" target="_blank">Mitacs Research Grant</a>
+        </p>
     </footer>
 </body>
 </html>
