--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>On-Body Haptics - Open Source Wearable Haptic Feedback Systems</title>
+    <!-- Last updated: 2026-01-26 -->
     <style>
         * {
             margin: 0;
