--- a/index.html
+++ b/index.html
@@ -171,27 +171,27 @@
         <div class="links">
             <h2>📖 Documentation</h2>
             <div class="link-grid">
-                <a href="docs/getting-started/choosing-platform.md" class="link-card">
+                <a href="https://github.com/MissCrispenCakes/On-body-haptics/blob/main/docs/getting-started/choosing-platform.md" class="link-card" target="_blank">
                     <h4>🤔 Choosing a Platform</h4>
                     <p>Arduino vs Raspberry Pi comparison guide</p>
                 </a>
-                <a href="docs/getting-started/arduino-quickstart.md" class="link-card">
+                <a href="https://github.com/MissCrispenCakes/On-body-haptics/blob/main/docs/getting-started/arduino-quickstart.md" class="link-card" target="_blank">
                     <h4>⚡ Arduino Quick Start</h4>
                     <p>15-minute setup for portable systems</p>
                 </a>
-                <a href="docs/getting-started/raspberry-pi-quickstart.md" class="link-card">
+                <a href="https://github.com/MissCrispenCakes/On-body-haptics/blob/main/docs/getting-started/raspberry-pi-quickstart.md" class="link-card" target="_blank">
                     <h4>🥧 Raspberry Pi Quick Start</h4>
                     <p>15-minute setup for high-fidelity effects</p>
                 </a>
-                <a href="docs/api/osc-protocol.md" class="link-card">
+                <a href="https://github.com/MissCrispenCakes/On-body-haptics/blob/main/docs/api/osc-protocol.md" class="link-card" target="_blank">
                     <h4>📡 OSC Protocol</h4>
                     <p>Complete API specification and examples</p>
                 </a>
-                <a href="docs/hardware/assembly-guide.md" class="link-card">
+                <a href="https://github.com/MissCrispenCakes/On-body-haptics/blob/main/docs/hardware/assembly-guide.md" class="link-card" target="_blank">
                     <h4>🔨 Hardware Assembly</h4>
                     <p>Step-by-step build instructions</p>
                 </a>
-                <a href="docs/hardware/pcb-fabrication.md" class="link-card">
+                <a href="https://github.com/MissCrispenCakes/On-body-haptics/blob/main/docs/hardware/pcb-fabrication.md" class="link-card" target="_blank">
                     <h4>⚙️ PCB Fabrication</h4>
                     <p>How to order custom PCBs</p>
                 </a>
